# AlivePing

./: .env.example  .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
app/: _layout.tsx  auth.tsx  index.tsx
app/flows/: _layout.tsx  contacts.tsx  history.tsx  home.tsx  scheduled.tsx  settings.tsx
app/flows/contacts/: index.tsx
app/flows/history/: [id].tsx  _layout.tsx  index.tsx
app/flows/home/: index.tsx
app/flows/settings/: _layout.tsx  about.tsx  index.tsx  privacy.tsx
components/: AppIcon.tsx  HapticTabButton.tsx  SolanaLogo.tsx
components/alert/: AlertScreen.tsx
components/history/: AlertDetailCard.tsx  EmptyHistoryState.tsx
components/icons/: WhatsAppIcon.tsx
components/settings/: SettingsItem.tsx  SettingsSection.tsx
components/ui/: Button.tsx  Card.tsx  ScreenHeader.tsx
config/: index.ts
contracts/: Anchor.toml  README.md
contracts/aliveping/: Cargo.toml
contracts/aliveping/src/: lib.rs
lib/: polyfills.ts  store.ts  utils.ts
lib/ai/: gemini.ts
lib/auth/: web3auth.ts
lib/constants/: datadog.ts
lib/hooks/: useCheckIn.ts  useContacts.ts
lib/location/: locationService.ts
lib/monitoring/: datadog.ts  events.ts  index.ts
lib/services/: battery.ts  phoneOffFallback.ts  scheduledCheckIns.ts  sms.ts  whatsapp.ts
lib/solana/: connection.ts  connectionHealth.ts  idl.ts  localWallet.ts  phantom.ts  program.ts  wallet.ts  walletConnection.ts
lib/utils/: haptics.ts  locationWeb.ts  notificationsWeb.ts  secureStore.ts
scripts/: test-whatsapp.js
types/: base-64.d.ts
